--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,6 +1,7 @@
 galaxy_info:
   role_name: phpbuild
   author: youyo
+  company: heptagon inc.
   description: setup php-build
   license: MIT
   min_ansible_version: 2.4
